# socialaberattelser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-deb.yml  transifex-sync.yml
.tx/: config
data/: se.danielnylander.socialaberattelser.desktop  socialaberattelser.desktop
po/: socialaberattelser.pot  sv.mo  sv.po
po/locale/sv/LC_MESSAGES/: socialaberattelser.mo
socialaberattelser/: __init__.py  __main__.py  export.py  main.py
src/socialaberattelser/: accessibility.py  export.py  main.py  phonetics.py
